first test update to google sheets api v4; transfer to Netlify hosting

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,10 @@ overviews.txt
 js/trend-chart.js
 js/charts.js
 js/forecast.js
+js/credentials.js
+test.html
+js/rhetmapdashboard_client.json
+.env
 
 # OS generated files #
 ######################
