--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ js/credentials.js
 test.html
 js/rhetmapdashboard_client.json
 .env
+functions/token-hider/node_modules
 
 # OS generated files #
 ######################
